[package]
name = "blue_engine_imgui"
version = "0.3.0"
edition = "2021"
description = "ImGUI library for Blue Engine"
keywords = ["gui", "blue_engine", "imgui"]
categories = ["gui", "game-development", "game-engines", "rendering", "game"]
repository = "https://github.com/AryanpurTech/BlueEngineImGUI"
license = "Apache-2.0"

[lib]
name = "blue_engine_imgui"

[dependencies]
blue_engine = { version = "0.4.13" }
imgui-wgpu = { version = "0.20.0" }
imgui-winit-support = { version = "0.8.1-alpha.0", path = "imgui-winit-support" }
imgui = { version = "0.8.2" }

[[example]]
name = "hello_gui"
path = "examples/hello_gui.rs"

[[example]]
name = "styling"
path = "examples/styling.rs"
