[package]
name = "blue_engine_imgui"
version = "0.4.2"
edition = "2021"
description = "ImGUI library for Blue Engine"
keywords = ["gui", "blue_engine", "imgui"]
categories = ["gui", "game-development", "game-engines", "rendering", "game"]
repository = "https://github.com/AryanpurTech/BlueEngineImGUI"
license = "Apache-2.0"

[lib]
name = "blue_engine_imgui"

[dependencies]
blue_engine = { version = "0.4", default-features = false }
imgui-wgpu = { path = "./imgui-wgpu-rs" }
imgui-winit-support = { path = "./imgui-winit-support" }
imgui = { path = "./imgui-rs/imgui", features = ["docking"] }

[[example]]
name = "hello_gui"
path = "examples/hello_gui.rs"

[[example]]
name = "styling"
path = "examples/styling.rs"
